@@ -4,13 +4,13 @@ Hash: SHA1
 AUX diablo-jdk-1.6.env 1008 RMD160 e0b95ee514bb554de1a91050112baf775709548f SHA1 fe38e931d697df56ad3200f68aabf24f71154f13 SHA256 1a629fdc3ea9aa571f8ef0a49f718286ad2b69497bcc45f58da5e7dd75bf0e58
 DIST diablo-caffe-freebsd7-amd64-1.6.0_07-b02.tar.bz2 62778916 RMD160 4846f0cb7c6b78d70c30da78c9645322dc158373 SHA1 35a351c7f679192da88d4f28b0c8fdccff99bd78 SHA256 09f9fb014779f1e02456d51692c61902125800830b82078be9eac95190343109
 DIST diablo-caffe-freebsd7-i386-1.6.0_07-b02.tar.bz2 64093245 RMD160 6a4b354ba556fe00aa260da7e6f269de6d894010 SHA1 8046dc67cff191a0779b8d9a297bf30b902a89c8 SHA256 971a537f8e852166fa94a9666b14e2f0a8ee51dcf7a470ab7bcb5be0dba05409
-EBUILD diablo-jdk-1.6.0.07.02.ebuild 4700 RMD160 b2c5b56f56fbb33e7c1d3aa9c08aadee4168726a SHA1 97b9b06c4bbf37d4eb5d0841b18ed493f7502b4d SHA256 c30f937218b4ab67bb69ee509da07c1eeb8a515dd8c5c97a04c7b3b66076b7ac
-MISC ChangeLog 1886 RMD160 c8705ecc11ec20485d87ab45e764cf2088b3c35d SHA1 37e9f99a0aa5f54e89c318654cd165f7507eb613 SHA256 1faf0861e0ab49dbe00fbd8605dd7ff9062dddd550a096257284e400bbedc88a
+EBUILD diablo-jdk-1.6.0.07.02.ebuild 4723 RMD160 fa28ee5427bc2bba0f45f4382702993accbabd43 SHA1 d1eff879160b9930930065a7e76ba5879a42a54c SHA256 10e6f088da0a8a7016dfa3136261b8d908e978fc7a94f20e3dc825b6f3ee8a25
+MISC ChangeLog 2062 RMD160 98a65e8a88e603650c693291df6eca071008ec10 SHA1 e3cf70589c9fcec3dc2412eb1b50a09cad7bbcf3 SHA256 af0da2ccf06cbba138df9d770ae9b3ebff2ad81220bcc4120ae641e4ae810635
 MISC metadata.xml 291 RMD160 c570e537e8b928defbd6d022001303ce2ef84a7a SHA1 08a03decf6a506afc76730be9b41a6fbb5a989b6 SHA256 e70edd2620f9a7e711b53d0cbe677a7b78268f2e859d9d2567c9c11c13008ceb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (Darwin)
+Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk3AQbIACgkQX3X2B8XHTom5MQCfTRqDhsJZyCt1xvxbNqc0xE6e
-fz8AoJYR+bbqmvQr7+S1NQf7K2z8DOdH
-=jGcT
+iEYEARECAAYFAk7qYgMACgkQX3X2B8XHTol1HACcDA1TBNNX+goxD5iuywIrjvQF
++hYAn0FYZVTgyS8ZvFcxvTXIYrCIK6kO
+=0CUI
 -----END PGP SIGNATURE-----
