@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/diablo-jdk
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/diablo-jdk/ChangeLog,v 1.11 2010/03/13 14:12:58 aballier Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/diablo-jdk/ChangeLog,v 1.12 2011/05/21 04:29:26 ssuominen Exp $
+
+  21 May 2011; Samuli Suominen <ssuominen@gentoo.org>
+  diablo-jdk-1.6.0.07.02.ebuild:
+  Change reference of virtual/lpr to net-print/cups and net-print/lprng wrt
+  #358879.
 
   13 Mar 2010; Alexis Ballier <aballier@gentoo.org>
   diablo-jdk-1.6.0.07.02.ebuild:
